dmrhub/lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: dmr-udp-input
  namespace: dmrhub
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.1.234
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: dmrhub
  ports:
    - name: udp-dmr
      protocol: UDP
      port: 62031
      targetPort: 62031
    - name: udp-openbridge
      protocol: UDP
      port: 62032
      targetPort: 62032
  externalTrafficPolicy: Local
